fix: changed gap to margin on icons

--- a/src/styles/new.css
+++ b/src/styles/new.css
@@ -569,12 +569,13 @@ nav a:active {
 #icons {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  /* gap: 10px; */
   margin: 5px 90px 0px 90px;
 }
 .icons-icon {
   width: 30px;
   height: 30px;
+  margin: 0px 5px;
 
   -webkit-transition: -webkit-transform 0.7s;
   -moz-transition: -moz-transform 0.7s;
